<resources>
    <string name="app_name">News</string>
    <string name="name">Sandhi Karunia Sugihartana</string>
    <string name="email">sandhi372@gmail.com</string>
    <string name="news_title">Judul Berita</string>
    <string name="description">Deskripsi</string>
    <string name="category">Kategori</string>
    <string name="upload_time">Waktu Upload</string>
    <string name="writer">Penulis</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string-array name="data_title">
        <item>Mengapa Tidur Teralalu Lama Bikin Sakit Kepala?</item>
        <item>Belasan Wisatawan Tersengat Ubur-ubur di Pantai Selatan Gunungkidul</item>
        <item>AS Akan Kirim Amunisi Uranium ke Ukraina, Bisa Tembus Tank Lapis Baja</item>
        <item>Transportasi Massal Kunci Utama Dorong Era Kendaraan Listrik</item>
        <item>Xenia Tabrak Pemotor hingga Tewas, Polisi: Pengemudi Mau Injak Rem Malah Gas</item>
        <item>Bisakah Gigi Berlubang Menyebabkan Kematian? Ini Kata Dokter Gigi</item>
        <item>RI Minta ASEAN Perkuat Kerja Sama Perdagangan</item>
        <item>PO Agung Sejati Punya Bus Tingkat Motobus</item>
        <item>Ganjar ke Relawan: Jangan Salfok, Dengar dan Sampaikan Keluhan Warga</item>
        <item>Mau Lolos Beasiswa LPDP 2024? Simak Tips Mahasiswa UNAIR Ini</item>
        <item>YLKI Minta Pemerintah Genjot Edukasi soal Kendaraan Listrik</item>
        <item>Dewa 19 Gelar Tur Soematera di Tiga Kota Pulau Sumatera</item>
        <item>Intip Biaya Penggantian Motor Kipas Radiator Nissan March</item>
        <item>Arkeolog Ungkap Kasus Kanker Paling Awal pada Manusia</item>
        <item>Tampilan WhatsApp Bakal Dirombak Besar-besaran, Seperti Apa?</item>
    </string-array>
</resources>